# NumSim

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh  out.temp  settings.txt
compare/: compare.sh  main.cpp
documentation/html/: annotated.html  array2D_8h_source.html  boundary_8h_source.html  central__differences_8h_source.html  classArray2D-members.html  classArray2D.html  classBoundary-members.html  classBoundary.html  classCentralDifferences-members.html  classCentralDifferences.html  classComputation-members.html  classComputation.html  classDiscretization-members.html  classDiscretization.html  classDonorCell-members.html  classDonorCell.html  classFieldVariable-members.html  classFieldVariable.html  classFluidTracer-members.html  classFluidTracer.html  classGaussSeidel-members.html  classGaussSeidel.html  classMask-members.html  classMask.html  classOutputWriter-members.html  classSOR.html  (+45 more)
input/: settings.txt  settings_aerodynamic_obstacle.txt  settings_cavity_with_a_step.txt  settings_damBreak.txt  settings_debug.txt  settings_debug_joni.txt  settings_drop.txt  settings_lid_driven_cavity_with_a_step.txt  settings_quadruple_cavity.txt  settings_tap.txt  settings_water_tap.txt
openFOAM/: README.md
src/: BC.txt  CMakeLists.txt  computation.cpp  computation.h  main.cpp
tests/: CMakeLists.txt  discrectization_tests.md  test_array2D.cpp  test_boundary.cpp  test_central_differences.cpp  test_computation.cpp  test_donor_cell.cpp  test_field_variable.cpp  test_fluid_tracer.cpp  test_mask.cpp  test_staggered_grid.cpp
vti_compare/: vti_compare.py
(+2792 files in other folders)
